@@ -2,16 +2,17 @@ package com.restful.api.exception;
 
 import com.restful.api.dto.ErrorDetailDto;
 import com.restful.api.dto.ErrorResponseDto;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.ConversionNotSupportedException;
 import org.springframework.beans.TypeMismatchException;
 import org.springframework.context.MessageSource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.http.converter.HttpMessageNotWritableException;
-import org.springframework.validation.BindException;
 import org.springframework.web.HttpMediaTypeNotAcceptableException;
 import org.springframework.web.HttpMediaTypeNotSupportedException;
 import org.springframework.web.HttpRequestMethodNotSupportedException;
@@ -27,9 +28,6 @@ import org.springframework.web.multipart.MaxUploadSizeExceededException;
 import org.springframework.web.multipart.support.MissingServletRequestPartException;
 import org.springframework.web.servlet.NoHandlerFoundException;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * API共通例外ハンドラー
@@ -74,7 +72,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
   public ResponseEntity<Object> handleMethodArgumentNotValid(
       MethodArgumentNotValidException ex,
       HttpHeaders headers,
-      HttpStatus status,
+      HttpStatusCode status,
       WebRequest request) {
     // 捕捉したバリデーション例外を取得してその1つ1つをDTOに詰めていく
     List<ErrorDetailDto> validatedErrorList =
@@ -82,7 +80,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
             .map(
                 fieldError ->
                     new ErrorDetailDto(fieldError.getField(), fieldError.getDefaultMessage()))
-            .collect(Collectors.toList());
+            .toList();
     String message = messageSource.getMessage("error.validate", null, request.getLocale());
     ErrorResponseDto response = new ErrorResponseDto(status.value(), message, validatedErrorList);
     return super.handleExceptionInternal(ex, response, headers, status, request);
@@ -93,7 +91,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
   public ResponseEntity<Object> handleHttpRequestMethodNotSupported(
       HttpRequestMethodNotSupportedException ex,
       HttpHeaders headers,
-      HttpStatus status,
+      HttpStatusCode status,
       WebRequest request) {
     String message =
         messageSource.getMessage("error.notSupportedMethod", null, request.getLocale());
@@ -106,7 +104,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
   public ResponseEntity<Object> handleHttpMediaTypeNotSupported(
       HttpMediaTypeNotSupportedException ex,
       HttpHeaders headers,
-      HttpStatus status,
+      HttpStatusCode status,
       WebRequest request) {
     String message =
         messageSource.getMessage("error.notSupportedMediaType", null, request.getLocale());
@@ -119,7 +117,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
   public ResponseEntity<Object> handleHttpMediaTypeNotAcceptable(
       HttpMediaTypeNotAcceptableException ex,
       HttpHeaders headers,
-      HttpStatus status,
+      HttpStatusCode status,
       WebRequest request) {
     String message =
         messageSource.getMessage("error.notAcceptableMediaType", null, request.getLocale());
@@ -130,7 +128,10 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
   /** {@inheritDoc} */
   @Override
   public ResponseEntity<Object> handleMissingPathVariable(
-      MissingPathVariableException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+      MissingPathVariableException ex,
+      HttpHeaders headers,
+      HttpStatusCode status,
+      WebRequest request) {
     String message =
         messageSource.getMessage("error.missingPathVariable", null, request.getLocale());
     ErrorResponseDto response = new ErrorResponseDto(status.value(), message);
@@ -142,7 +143,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
   public ResponseEntity<Object> handleMissingServletRequestParameter(
       MissingServletRequestParameterException ex,
       HttpHeaders headers,
-      HttpStatus status,
+      HttpStatusCode status,
       WebRequest request) {
     String message =
         messageSource.getMessage("error.missingServletRequestParameter", null, request.getLocale());
@@ -155,7 +156,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
   public ResponseEntity<Object> handleServletRequestBindingException(
       ServletRequestBindingException ex,
       HttpHeaders headers,
-      HttpStatus status,
+      HttpStatusCode status,
       WebRequest request) {
     String message =
         messageSource.getMessage("error.servletRequestBinding", null, request.getLocale());
@@ -168,7 +169,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
   public ResponseEntity<Object> handleConversionNotSupported(
       ConversionNotSupportedException ex,
       HttpHeaders headers,
-      HttpStatus status,
+      HttpStatusCode status,
       WebRequest request) {
     String message =
         messageSource.getMessage("error.notSupportedConversion", null, request.getLocale());
@@ -179,7 +180,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
   /** {@inheritDoc} */
   @Override
   public ResponseEntity<Object> handleTypeMismatch(
-      TypeMismatchException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+      TypeMismatchException ex, HttpHeaders headers, HttpStatusCode status, WebRequest request) {
     String message = messageSource.getMessage("error.typeMismatch", null, request.getLocale());
     ErrorResponseDto response = new ErrorResponseDto(status.value(), message);
     return super.handleExceptionInternal(ex, response, headers, status, request);
@@ -190,7 +191,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
   public ResponseEntity<Object> handleHttpMessageNotReadable(
       HttpMessageNotReadableException ex,
       HttpHeaders headers,
-      HttpStatus status,
+      HttpStatusCode status,
       WebRequest request) {
     String message =
         messageSource.getMessage("error.notReadableMessage", null, request.getLocale());
@@ -203,7 +204,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
   public ResponseEntity<Object> handleHttpMessageNotWritable(
       HttpMessageNotWritableException ex,
       HttpHeaders headers,
-      HttpStatus status,
+      HttpStatusCode status,
       WebRequest request) {
     String message =
         messageSource.getMessage("error.notWritableMessage", null, request.getLocale());
@@ -216,7 +217,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
   public ResponseEntity<Object> handleMissingServletRequestPart(
       MissingServletRequestPartException ex,
       HttpHeaders headers,
-      HttpStatus status,
+      HttpStatusCode status,
       WebRequest request) {
     String message =
         messageSource.getMessage("error.missingServletRequestPart", null, request.getLocale());
@@ -226,17 +227,11 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
 
   /** {@inheritDoc} */
   @Override
-  public ResponseEntity<Object> handleBindException(
-      BindException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
-    String message = messageSource.getMessage("error.bind", null, request.getLocale());
-    ErrorResponseDto response = new ErrorResponseDto(status.value(), message);
-    return super.handleExceptionInternal(ex, response, headers, status, request);
-  }
-
-  /** {@inheritDoc} */
-  @Override
   public ResponseEntity<Object> handleAsyncRequestTimeoutException(
-      AsyncRequestTimeoutException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+      AsyncRequestTimeoutException ex,
+      HttpHeaders headers,
+      HttpStatusCode status,
+      WebRequest request) {
     String message =
         messageSource.getMessage("error.asyncRequestTimeout", null, request.getLocale());
     ErrorResponseDto response = new ErrorResponseDto(status.value(), message);
@@ -249,11 +244,11 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
    * @param ex 例外
    * @param request リクエスト
    */
-  @ExceptionHandler(MaxUploadSizeExceededException.class)
+  @Override
   public ResponseEntity<Object> handleMaxUploadSizeExceededException(
       MaxUploadSizeExceededException ex,
       HttpHeaders headers,
-      HttpStatus status,
+      HttpStatusCode status,
       WebRequest request) {
     String message = messageSource.getMessage("error.maxSizeExceeded", null, request.getLocale());
     ErrorResponseDto response = new ErrorResponseDto(status.value(), message);
@@ -267,7 +262,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
    */
   @Override
   public ResponseEntity<Object> handleNoHandlerFoundException(
-      NoHandlerFoundException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+      NoHandlerFoundException ex, HttpHeaders headers, HttpStatusCode status, WebRequest request) {
     String message = messageSource.getMessage("error.notFound", null, request.getLocale());
     ErrorResponseDto response = new ErrorResponseDto(status.value(), message);
     return super.handleExceptionInternal(ex, response, headers, status, request);
